src/objects/ints__Add_Deduct_Options__c.object
<CustomObject>
    <description>The Add/Deduct objects are returned for the purpose of displaying the available options (add/deducts) for user interaction. In an interactive product, when a user selects an add/deduct, the vehicle value should be adjusted using the provided values.</description>
    <fields>
        <fullName>ints__Amount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__EquipmentDetail__c</fullName>
        <label>EquipmentDetail</label>
        <referenceTo>ints__EquipmentDetail__c</referenceTo>
        <relationshipLabel>Equipment Add Deduct Options</relationshipLabel>
        <relationshipName>Equipment_Add_Deduct_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Name__c</fullName>
        <description>A brief description of the Add/Deduct option</description>
        <label>Add/Deduct Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__uoc__c</fullName>
        <label>Add/Deduct Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Equipment Add Deduct Option</label>
    <nameField>
        <displayFormat>ADO-{0000000000}</displayFormat>
        <label>Add Deduct Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Add Deduct Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>